--- a/momsite/header.html
+++ b/momsite/header.html
@@ -1,7 +1,7 @@
 ﻿<!--Copyright © Sam Savage 2016-->
 <!--<h1>Circles of Life</h1>-->
 <ul class="navigationmenu">
-    <li><a href="/"><b>Circles of Life</b></a></li>
+    <li><a href="index.html"><b>Circles of Life</b></a></li>
     <li><a href="gallery.html">Product Gallery</a></li>
     <li><a href="testimonials.html">User Gallery</a></li>
     <li><a href="news.html">News</a></li>
@@ -10,7 +10,7 @@
     <li style="float:right" class="icon">
         <a href="javascript:void(0);" style="font-size:15px;" onclick="showNavigationMenu()">☰</a>
     </li>
-    <li style="float:right"><a href="cart.html" id="viewCart" >View Cart (<span class="simpleCart_quantity"></span>)</a></li>
+    <li style="float:right"><a href="cart.html" id="viewCart" >View Cart (<span class="simpleCart_grandTotal"></span>)</a></li>
 </ul>
 <script>
     function showNavigationMenu() {
