--- a/momsite/gallery.html
+++ b/momsite/gallery.html
@@ -45,20 +45,20 @@
             <div id="detailsdiv">
                 <div class="simpleCart_shelfItem">
                     <p>
-                        <select class="item_type" style="background:black; color:white">
+                        <select class="item_type" style="background:black; color:white; font-size: 110%">
                             <option value="Card"> Card for <span class="item_price">$5.00</span> </option>
                             <option value="Medium Print"> 11x11 Print for <span class="item_price">$5.00</span> </option>
                             <option value="Large Print"> 18x18 Print for <span class="item_price">$15.00</span> </option>
                             <option value="Medium Print Colored"> 11x11 Colored Print for <span class="item_price">$15.00</span> </option>
                             <option value="Large Print Colored"> 18x18 Colored Print for <span class="item_price">$30.00</span> </option>
                         </select>
-                        <input style="background:black; color:white; max-width: 50px" value="1" class="item_Quantity" type="number" min="1" max="100">
-                        <a style="color:white" class="item_add" href="javascript:;"> Add to Cart </a>
+                        <input style="background:black; color:white; max-width: 50px; font-size: 110%" value="1" class="item_Quantity" type="number" min="1" max="100">
+                        <a style="margin-top: 10px; border-radius: 5px; padding: 5px; color:black; font-size: 110%; background: white; text-decoration: none" class="item_add" href="javascript:;"> Add to Cart </a>
                     </p>
                     <img style="display:none" class="item_image">
                     <h1 class="item_name">Image Title</h1>
                 </div>
-                <div style="text-align: left" class="description">Image Description</div>
+                <div style="text-align: left; margin: 10px; padding:10px;" class="description">Image Description</div>
             </div>
         </div>
     </center>
@@ -162,6 +162,8 @@
     $("#detailsdiv a.item_add").click(function () {
         var old_image = $("#centerimage img");
         var new_image = old_image.clone();
+        new_image.removeAttr("id");
+        new_image.css("width", "auto");
         old_image.css("visibility", "hidden");
         $("#centerimage").append(new_image);
 
