--- a/momsite/index.html
+++ b/momsite/index.html
@@ -23,14 +23,16 @@
 <body>
     <div id="headerDiv"></div>
     <center>
-        <div style="max-width:1280px; text-align:left">
+        <div style="max-width:1280px; text-align:left; margin: 10px; padding:10px;">
             <h3>Welcome to the Circles-of-Life homepage.</h3>
             <p>
                 Please view the <a href="about.html">About</a> page to read information on who I am and why I draw these circles.  You can see
                 drawings that are for sale on the <a href="gallery.html">Product Gallery</a> page. I am selling these drawings as greeting cards (6in square),
                 11in x 11in prints, and 18in x 18in prints.  You can order them as uncolored prints or colored prints.  To see some of the
                 coloring options, please view the <a href="testimonials.html">User Gallery</a> page.  Please indicate in the PayPal comment section how
-                you would like a print colored (this will be after you checkout, but before you verify the order on the PayPal website).  Otherwise, artistic license applies ;)
+                you would like a print colored (this will be after you checkout, but before you verify the order on the PayPal website).  You can also provide
+                a comment for each item you add to the cart, but you must fill in the comment before adding it to the cart.  Otherwise, if you do not customize,
+                artistic license applies ;)
             </p>
             <p>Please note that all of the images shared on this site have watermarks.  The print that you receive will <b>not</b> have the grid and spiral watermark.</p>
             <p>11 x 11 black and white coloring pages and cards are 1 for $5, 3 for $12, or 6 in an artist folder for $25.</p>
